modal padding fix on mobile

--- a/src/components/projectsPreview/DockerPreview.css
+++ b/src/components/projectsPreview/DockerPreview.css
@@ -141,6 +141,8 @@
 
 @media (max-width: 1084px) {
     .DockerModalContentInner {
+        padding-left: 0rem;
+        padding-right: 0rem;
         grid-template-columns: minmax(200px,1fr);
         grid-template-areas:
             "title"
