--- a/src/components/projectsPreview/HTTPPreview.css
+++ b/src/components/projectsPreview/HTTPPreview.css
@@ -141,6 +141,8 @@
 /* 9) Responsive */
 @media (max-width: 768px) {
     .WebServerModalContentInner {
+        padding-left: 0rem;
+        padding-right: 0rem;
         grid-template-columns: minmax(200px,1fr);
         grid-template-areas:
             "title"
