--- a/src/components/projectsPreview/RayTracingPreview.css
+++ b/src/components/projectsPreview/RayTracingPreview.css
@@ -162,6 +162,8 @@
 
 @media (max-width: 768px) {
     .RayTracerModalContentInner {
+        padding-left: 0rem;
+        padding-right: 0rem;
         grid-template-columns: minmax(200px,1fr);
         grid-template-areas:
             "title"
@@ -174,4 +176,7 @@
             "background"
             "actions";
     }
+
+
+    
 }
